fix: spacing in article tags

--- a/assets/css/components/article.css
+++ b/assets/css/components/article.css
@@ -6,4 +6,9 @@ article.article {
 	& footer {
 		margin-top: var(--spacing-6);
 	}
+
+	.meta {
+		display: flex;
+		gap: var(--spacing-1);
+	}
 }
